tests/baselines/reference/parserRegularExpression3.errors.txt
parserRegularExpression3.ts(1,1): error TS2304: Cannot find name 'Foo'.


==== parserRegularExpression3.ts (1 errors) ====
    Foo(!/(\\?|&)adurl=/);
    ~~~
!!! error TS2304: Cannot find name 'Foo'.